# pdast

./: .gitignore  .npmignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PLAN.md  PROMPT.md  README.md  index.html  package.json  pdast.py  rust-toolchain.toml
.github/workflows/: deploy.yml  publish-npm.yml  release.yml
ast2pd/: Cargo.toml
ast2pd/src/: main.rs
components/: pd-ast-viewer.js  pd-file-drop.js
node/: components.js  index.d.ts  index.js
pd2ast/: Cargo.toml
pd2ast/src/: main.rs
pdast/: Cargo.toml
pdast/src/: error.rs  lib.rs  types.rs  wasm.rs
pdast/src/emit/: mod.rs
pdast/src/parse/: gui.rs  message.rs  mod.rs
pdast/tests/: integration.rs
pdast2faust/: Cargo.toml
pdast2faust/faust-lib/: *~.dsp  +.dsp  +~.dsp  -.dsp  -~.dsp  abs.dsp  abs~.dsp  adc~.dsp  and.dsp  atan.dsp  atan2.dsp  bang.dsp  bendin.dsp  biquad~.dsp  bp~.dsp  change.dsp  clip.dsp  clip~.dsp  cos.dsp  cpole~.dsp  ctlin.dsp  dac~.dsp  dbtopow.dsp  dbtorms.dsp  delay.dsp  delread~.dsp  delwrite~.dsp  div.dsp  div~.dsp  env~.dsp  eq.dsp  exp.dsp  expr.dsp  expr~.dsp  float.dsp  ftom.dsp  gt.dsp  gte.dsp  hip~.dsp  inlet.dsp  (+50 more)
pdast2faust/src/: faust_gen.rs  main.rs
tests/fixtures/: abstraction.pd  array.pd  control.pd  from_plugdata.pd  gui.pd  midi.pd  mygain.pd  sendreceive.pd  sine.pd  subpatch.pd
web/: index.html
web/components/: pd-ast-viewer.js  pd-file-drop.js  pd-loader.js  pd-patch-graph.js  pd-styles.js
