[package]
name = "pdast"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Parse PureData .pd patches into a JSON AST and emit them back"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
