[package]
name = "pdast"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Parse PureData .pd patches into a JSON AST and emit them back"
license = "Zlib"
authors = ["David Konsumer (@konsumer)"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Optional JS-host WASM bindings (enable with --features wasm-js)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
# JS-host WASM: returns JS objects directly via wasm-bindgen.
# Build with: cargo build --target wasm32-unknown-unknown --features wasm-js
# Or:         wasm-pack build --features wasm-js
wasm-js = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys"]

[lib]
# "cdylib" is needed for wasm-bindgen / wasm-pack;
# "rlib" keeps the crate usable as a normal Rust dependency.
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
pretty_assertions = "1"
